--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -259,7 +259,7 @@
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade @aws-cdk/assert @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import jest jest-junit jsii jsii-diff jsii-docgen jsii-pacmak json-schema npm-check-updates standard-version ts-jest typescript constructs"
+          "exec": "yarn upgrade @aws-cdk/assert @types/github-username-regex @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import jest jest-junit jsii jsii-diff jsii-docgen jsii-pacmak json-schema npm-check-updates standard-version ts-jest typescript github-username-regex @aws-cdk/aws-iam @aws-cdk/core constructs @aws-cdk/aws-iam @aws-cdk/core github-username-regex"
         },
         {
           "exec": "npx projen"
