--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aws-cdk-github-actions-oidc",
+  "name": "@aripalo/aws-cdk-github-oidc",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ari.palo/aws-cdk-github-actions-oidc.git"
+    "url": "https://github.com/ari.palo/aws-cdk-github-oidc.git"
   },
   "scripts": {
     "clobber": "npx projen clobber",
@@ -28,11 +28,12 @@
   },
   "author": {
     "name": "Ari Palo",
-    "email": "ari.palo@almamedia.fi",
+    "email": "opensource@aripalo.com",
     "organization": false
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.95.2",
+    "@types/github-username-regex": "^1.0.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^14.17.0",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
@@ -55,9 +56,18 @@
     "typescript": "^4.4.4"
   },
   "peerDependencies": {
+    "@aws-cdk/aws-iam": "^1.95.2",
+    "@aws-cdk/core": "^1.95.2",
     "constructs": "^3.2.27"
   },
-  "bundledDependencies": [],
+  "dependencies": {
+    "@aws-cdk/aws-iam": "^1.95.2",
+    "@aws-cdk/core": "^1.95.2",
+    "github-username-regex": "^1.0.0"
+  },
+  "bundledDependencies": [
+    "github-username-regex"
+  ],
   "keywords": [
     "cdk"
   ],
