--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.95.2",
+    "@aws-cdk/aws-iam": "^1.130.0",
+    "@aws-cdk/core": "^1.130.0",
     "@types/github-username-regex": "^1.0.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^14.17.0",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
+    "constructs": "^3.3.161",
     "eslint": "^8.1.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.5.0",
