--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@aripalo/aws-cdk-github-oidc",
+  "description": "CDK constructs to use OpenID Connect for authenticating your Github Action workflow with AWS IAM",
   "repository": {
     "type": "git",
     "url": "https://github.com/ari.palo/aws-cdk-github-oidc.git"
@@ -117,7 +118,7 @@
     }
   },
   "types": "lib/index.d.ts",
-  "stability": "stable",
+  "stability": "experimental",
   "jsii": {
     "outdir": "dist",
     "targets": {},
