feat: change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aripalo/aws-cdk-github-oidc",
+  "name": "aws-cdk-github-oidc",
   "description": "CDK constructs to use OpenID Connect for authenticating your Github Action workflow with AWS IAM",
   "repository": {
     "type": "git",
