--- a/.gitattributes
+++ b/.gitattributes
@@ -6,8 +6,10 @@
 /.github/pull_request_template.md linguist-generated
 /.github/workflows/build.yml linguist-generated
 /.github/workflows/pull-request-lint.yml linguist-generated
+/.github/workflows/release-cdkv1.yml linguist-generated
 /.github/workflows/release.yml linguist-generated
 /.github/workflows/stale.yml linguist-generated
+/.github/workflows/upgrade-cdkv1.yml linguist-generated
 /.github/workflows/upgrade-main.yml linguist-generated
 /.gitignore linguist-generated
 /.mergify.yml linguist-generated
