--- a/.gitignore
+++ b/.gitignore
@@ -49,4 +49,6 @@ junit.xml
 tsconfig.json
 !/API.md
 !/.github/workflows/release.yml
+!/.github/workflows/release-cdkv1.yml
 !/.github/workflows/upgrade-main.yml
+!/.github/workflows/upgrade-cdkv1.yml
