--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
+    "package:go": "npx projen package:go",
     "package:js": "npx projen package:js",
     "package:python": "npx projen package:python",
     "post-compile": "npx projen post-compile",
@@ -128,6 +129,9 @@
       "python": {
         "distName": "aws-cdk-github-oidc",
         "module": "aws_cdk_github_oidc"
+      },
+      "go": {
+        "moduleName": "github.com/aripalo/aws-cdk-github-oidc-go"
       }
     },
     "tsc": {
