--- a/.github/workflows/upgrade-cdkv1.yml
+++ b/.github/workflows/upgrade-cdkv1.yml
@@ -18,8 +18,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: cdkv1
+      - name: Setup Node.js
+        uses: actions/setup-node@v2.2.0
+        with:
+          node-version: 14.21.1
       - name: Install dependencies
-        run: yarn install --check-files --frozen-lockfile
+        run: npm ci
       - name: Upgrade dependencies
         run: npx projen upgrade
       - id: create_patch
@@ -33,8 +37,6 @@ jobs:
         with:
           name: .repo.patch
           path: .repo.patch
-    container:
-      image: jsii/superchain:1-buster-slim-node14
   pr:
     name: Create Pull Request
     needs: upgrade
