--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
   "devDependencies": {
     "@types/github-username-regex": "^1.0.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^12",
+    "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.12.0",
-    "constructs": "10.0.5",
+    "aws-cdk-lib": "2.24.1",
+    "constructs": "10.0.0",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.7.1",
@@ -64,8 +64,8 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.12.0",
-    "constructs": "^10.0.5"
+    "aws-cdk-lib": "^2.24.1",
+    "constructs": "^10.0.0"
   },
   "keywords": [
     "aws",
@@ -78,6 +78,9 @@
     "oidc",
     "openid-connect"
   ],
+  "engines": {
+    "node": ">= 14.21.1"
+  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
