feat: use jsii-struct-builder to produce RoleProps Fixes #36

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,11 +34,7 @@
     }
   },
   "ignorePatterns": [
-    "*.js",
-    "*.d.ts",
-    "node_modules/",
-    "*.generated.ts",
-    "coverage",
+    "src/generated/*.ts",
     "!.projenrc.js"
   ],
   "rules": {
