--- a/.gitattributes
+++ b/.gitattributes
@@ -21,4 +21,5 @@
 /LICENSE linguist-generated
 /package-lock.json linguist-generated
 /package.json linguist-generated
+/src/generated/iam-role-props.ts linguist-generated
 /tsconfig.dev.json linguist-generated
